--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-router": "^6.12.1",
+    "react-router-dom": "^6.12.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
